Add fps calculator

--- a/holistics/tflite-inference.ipynb
+++ b/holistics/tflite-inference.ipynb
@@ -276,12 +276,9 @@
     "\n",
     "interpreter = tf.lite.Interpreter(model_path=\"./model.tflite\")\n",
     "interpreter.allocate_tensors()\n",
-    "# interpreter = tflite.Interpreter(\"./model.tflite\")\n",
-    "found_signatures = list(interpreter.get_signature_list().keys())\n",
-    "prediction_fn = interpreter.get_signature_runner(\"serving_default\")\n",
     "\n",
-    "# output = prediction_fn(inputs=demo_raw_data)\n",
-    "# sign = output['outputs'].argmax()"
+    "found_signatures = list(interpreter.get_signature_list().keys())\n",
+    "prediction_fn = interpreter.get_signature_runner(\"serving_default\")\n"
    ]
   },
   {
